# netnotify-client

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  netnotify-client.c  netnotify-client.h
